[package]
name = "stack-cli"
version = "0.1.0"
description = "A command-line stackoverflow client"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.22.1"
flate2 = "1.0.25"
htmlescape = "0.3.1"
regex = "1.7.2"
reqwest = { version = "0.11.15", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
